다이랙트 프레임워크 18.01.30 만든거

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ IOCP_1223/ConsoleApplication4/x64/
 IOCP_1223/Network/x64/
 IOCP_1223/Server/x64/
 IOCP_1223/Test/x64/
+TEST0129/.vs/
+TEST0129/TEST0129/x64/
