--- a/TEST0129/TEST0129/TEST0129.vcxproj
+++ b/TEST0129/TEST0129/TEST0129.vcxproj
@@ -19,11 +19,17 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BoxObject.cpp" />
+    <ClCompile Include="camera.cpp" />
     <ClCompile Include="D3DFramework.cpp" />
+    <ClCompile Include="D3DRenderObject.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BoxObject.h" />
+    <ClInclude Include="camera.h" />
     <ClInclude Include="D3DFramework.h" />
+    <ClInclude Include="D3DRenderObject.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
